--- a/video-nfc-admin/package.json
+++ b/video-nfc-admin/package.json
@@ -9,15 +9,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^15.5.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "15.5.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "@aws-amplify/ui-react": "^6.0.0",
+    "aws-amplify": "^6.0.0",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "15.5.4"
   },
   "engines": {
     "node": ">=18.0.0",
