--- a/video-nfc-admin/package.json
+++ b/video-nfc-admin/package.json
@@ -16,7 +16,12 @@
     "aws-amplify": "^6.0.0",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.0",
+    "lucide-react": "^0.263.1",
+    "react-hot-toast": "^2.4.1",
+    "@tanstack/react-query": "^5.0.0",
+    "date-fns": "^2.30.0",
+    "react-day-picker": "^8.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
