fix: TypeScript設定を明示化 - Amplifyビルドエラーを解決

--- a/video-nfc-admin/package.json
+++ b/video-nfc-admin/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "next": "15.5.4",
