--- a/video-nfc-admin/amplify.yml
+++ b/video-nfc-admin/amplify.yml
@@ -1,28 +1,24 @@
 version: 1
-applications:
-  - appRoot: video-nfc-admin
-    frontend:
-      phases:
-        preBuild:
-          commands:
-            # Node.js 18以上を使用
-            - node -v
-            - npm -v
-            # 依存関係のインストール（devDependenciesを含む）
-            - npm ci
-        build:
-          commands:
-            # TypeScriptの型チェック
-            - npm run type-check
-            # Next.jsビルド
-            - npm run build
-      artifacts:
-        # Next.js静的エクスポート（.nextディレクトリ）
-        baseDirectory: .next
-        files:
-          - '**/*'
-      cache:
-        paths:
-          # node_modulesとNext.jsキャッシュをキャッシュ
-          - node_modules/**/*
-          - .next/cache/**/*
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - echo "Current directory:"
+        - pwd
+        - echo "Directory contents:"
+        - ls -la
+        - echo "Checking for package.json:"
+        - cat package.json
+        - npm ci
+    build:
+      commands:
+        - npm run type-check
+        - npm run build
+  artifacts:
+    baseDirectory: .next
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - node_modules/**/*
+      - .next/cache/**/*
