--- a/video-nfc-admin/amplify.yml
+++ b/video-nfc-admin/amplify.yml
@@ -7,10 +7,9 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run type-check
         - npm run build
   artifacts:
-    baseDirectory: video-nfc-admin/out
+    baseDirectory: video-nfc-admin/.next
     files:
       - '**/*'
   cache:
