--- a/video-nfc-admin/amplify.yml
+++ b/video-nfc-admin/amplify.yml
@@ -9,7 +9,7 @@ frontend:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: video-nfc-admin/.next
+    baseDirectory: video-nfc-admin/out
     files:
       - '**/*'
   cache:
