Fix: Correct baseDirectory path in amplify.yml
- Change from 'video-nfc-admin/out' to 'out'
- The build already runs in video-nfc-admin directory
- Should resolve 404 errors

--- a/video-nfc-admin/amplify.yml
+++ b/video-nfc-admin/amplify.yml
@@ -9,7 +9,7 @@ frontend:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: video-nfc-admin/out
+    baseDirectory: out
     files:
       - '**/*'
   cache:
