Fix: Correct Amplify configuration for repository structure
- Add cd video-nfc-admin command back
- Set baseDirectory to video-nfc-admin/out
- Update cache paths to include video-nfc-admin prefix
- Should resolve 404 issues with proper directory structure

--- a/video-nfc-admin/amplify.yml
+++ b/video-nfc-admin/amplify.yml
@@ -3,15 +3,16 @@ frontend:
   phases:
     preBuild:
       commands:
+        - cd video-nfc-admin
         - npm ci
     build:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: out
+    baseDirectory: video-nfc-admin/out
     files:
       - '**/*'
   cache:
     paths:
-      - node_modules/**/*
-      - .next/cache/**/*
+      - video-nfc-admin/node_modules/**/*
+      - video-nfc-admin/.next/cache/**/*
