Fix: Correct Amplify configuration - video-nfc-admin IS the repository root
- Remove cd video-nfc-admin command (not needed)
- Set baseDirectory to out (relative to repo root)
- Update cache paths to be relative to repo root
- This should finally resolve the 404 issues

--- a/video-nfc-admin/amplify.yml
+++ b/video-nfc-admin/amplify.yml
@@ -3,16 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
-        - cd video-nfc-admin
         - npm ci
     build:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: video-nfc-admin/out
+    baseDirectory: out
     files:
       - '**/*'
   cache:
     paths:
-      - video-nfc-admin/node_modules/**/*
-      - video-nfc-admin/.next/cache/**/*
+      - node_modules/**/*
+      - .next/cache/**/*
