Fix: Complete amplify.yml rewrite for monorepo structure
- Add cd video-nfc-admin to build commands
- Ensure proper directory navigation
- This should finally resolve the 404 issue

--- a/video-nfc-admin/amplify.yml
+++ b/video-nfc-admin/amplify.yml
@@ -7,6 +7,7 @@ frontend:
         - npm ci
     build:
       commands:
+        - cd video-nfc-admin
         - npm run build
   artifacts:
     baseDirectory: video-nfc-admin/out
