--- a/video-nfc-infrastructure/.gitignore
+++ b/video-nfc-infrastructure/.gitignore
@@ -6,30 +6,37 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+cdk.out.new
 
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.production
 
-# IDE
-.idea
-.vscode
-*.swp
-*.swo
-*~
+# Editor
+.vscode/
+.idea/
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Build output
-dist/
-build/
-
 # Logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
+# Build outputs
+dist/
+build/
+
+# MCP Server node_modules
+mcp-servers/*/node_modules/
+mcp-servers/*/package-lock.json
+
+# Test coverage
+coverage/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
