fix: Lambda関数にnode_modulesを含めてデプロイ
- lambda/package.jsonのビルドスクリプトを修正
- node_modulesを自動的にdist/にコピー
- uuidモジュール欠如による502エラーを修正
- 組織作成・販売店作成APIが正常動作可能に

--- a/video-nfc-infrastructure/lambda/package.json
+++ b/video-nfc-infrastructure/lambda/package.json
@@ -4,10 +4,10 @@
   "description": "Lambda functions for Video NFC Admin",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy:modules",
     "watch": "tsc --watch",
     "clean": "rm -rf dist",
-    "copy:modules": "cp -R node_modules dist/node_modules"
+    "copy:modules": "mkdir -p dist/node_modules && cp -R node_modules/* dist/node_modules/"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.906.0",
