fix: Lambda関数のnode_modules問題を根本的に解決
- cp -Rコマンドをやめてnpm install --productionに変更
- fast-xml-parser/lib/fxp.cjsが正しくインストールされるように修正
- シンボリックリンクと依存関係の問題を解決
- 再発防止: npm installで確実に全依存関係をインストール

--- a/video-nfc-infrastructure/lambda/package.json
+++ b/video-nfc-infrastructure/lambda/package.json
@@ -4,10 +4,10 @@
   "description": "Lambda functions for Video NFC Admin",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && npm run copy:modules",
+    "build": "npm run clean && tsc && npm run install-deps",
     "watch": "tsc --watch",
     "clean": "rm -rf dist",
-    "copy:modules": "mkdir -p dist/node_modules && cp -R node_modules/* dist/node_modules/"
+    "install-deps": "cd dist && cp ../package.json . && npm install --production --no-package-lock"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.906.0",
