--- a/video-nfc-admin/package.json
+++ b/video-nfc-admin/package.json
@@ -10,27 +10,29 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "15.5.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
     "@aws-amplify/ui-react": "^6.0.0",
-    "aws-amplify": "^6.0.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "lucide-react": "^0.263.1",
-    "react-hot-toast": "^2.4.1",
     "@tanstack/react-query": "^5.0.0",
+    "@types/qrcode": "^1.5.5",
+    "autoprefixer": "^10.4.0",
+    "aws-amplify": "^6.0.0",
     "date-fns": "^2.30.0",
-    "react-day-picker": "^8.9.0"
+    "lucide-react": "^0.263.1",
+    "next": "15.5.4",
+    "postcss": "^8.4.0",
+    "qrcode": "^1.5.4",
+    "react": "18.3.1",
+    "react-day-picker": "^8.9.0",
+    "react-dom": "18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "15.5.4"
+    "eslint-config-next": "15.5.4",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0",
