--- a/video-nfc-infrastructure/package.json
+++ b/video-nfc-infrastructure/package.json
@@ -24,23 +24,22 @@
     "mcp:update": "npm update && npm run mcp:install"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
     "@types/aws-lambda": "^8.10.129",
+    "@types/node": "^20.19.23",
     "aws-cdk": "^2.110.0",
     "typescript": "^5.3.0"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.110.0",
-    "constructs": "^10.3.0",
-    "dotenv": "^16.3.1",
-    "@aws-sdk/client-s3": "^3.637.0",
-    "@aws-sdk/s3-request-presigner": "^3.637.0",
-    "@aws-sdk/client-dynamodb": "^3.637.0",
-    "@aws-sdk/lib-dynamodb": "^3.637.0",
-    "@aws-sdk/client-lambda": "^3.637.0",
     "@aws-sdk/client-cloudwatch": "^3.637.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.637.0",
-    "@modelcontextprotocol/sdk": "^1.0.0"
+    "@aws-sdk/client-dynamodb": "^3.637.0",
+    "@aws-sdk/client-lambda": "^3.637.0",
+    "@aws-sdk/client-s3": "^3.637.0",
+    "@aws-sdk/lib-dynamodb": "^3.637.0",
+    "@aws-sdk/s3-request-presigner": "^3.637.0",
+    "@modelcontextprotocol/sdk": "^1.0.0",
+    "aws-cdk-lib": "^2.110.0",
+    "constructs": "^10.3.0",
+    "dotenv": "^16.3.1"
   }
 }
-
