--- a/video-nfc-infrastructure/services/generate-upload-url/package.json
+++ b/video-nfc-infrastructure/services/generate-upload-url/package.json
@@ -4,10 +4,7 @@
   "description": "Generate pre-signed URL for video upload",
   "main": "index.js",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.917.0",
-    "@aws-sdk/client-s3": "^3.917.0",
-    "@aws-sdk/lib-dynamodb": "^3.917.0",
-    "@aws-sdk/s3-request-presigner": "^3.917.0",
+    "aws-sdk": "^2.1490.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
